2008-01-07  John W. Eaton  <jwe@octave.org>

	* gripes.cc (gripe_wrong_type_arg (const std::string&, const
	octave_value&, bool)): New function.
	* gripes.h: Provide decl.

	* oct-stream.cc (printf_value_cache::printf_value_cache):
	Reject structs, cells, objects, and lists.
	(octave_base_stream::do_printf): Quit early if printf_value_cache
	constructor fails.

	* parse.y (make_anon_fcn_handle): Don't attempt to convert
	expression to assignment to __retval__.

2008-01-07  Michael Goffioul <michael.goffioul@gmail.com>

	* ov-builtin.h (octave_builtin): Tag with OCTINTERP_API.
	* ov-dld-fcn.h (octave_dld_function): Likewise.

	* ov-dld-fcn.cc (octave_dld_function::create): New function.
	* ov-dld-fcn.h: Provide decl.
	* defun.h (DEFINE_FUNX_INSTALLER_FUN3): Call it instead of
	creating a new octave_dld_function object directly.

2008-01-04  John Swensen  <jpswensen@comcast.net>

	* debug.cc (bp_table::do_remove_all_breakpoints_in_file):
	Avoid calling erase on invalid bp_map iterators.
	(bp_table::do_remove_breakpoint): Only try to delete breakpoints
	if some exist.  Avoid calling erase on invalid bp_map iterators.
	(parse_dbfunction_params): Return early if ARGS is empty.
	New arg, WHO.  Change all uses.
	Accept but do nothing with struct args.

2008-01-04  Thomas Weber  <thomas.weber.mail@gmail.com>

	* variables.cc (Fclear): Doc fix.

2008-01-04  John W. Eaton  <jwe@octave.org>

	* symtab.h (symbol_table:pop_scope): Avoid accessing beyond end of
	scope_stack.

2008-01-04  David Bateman  <dbateman@free.fr>

	* ov-mapper.cc (SPARSE_MAPPER_LOOP_2): Use data method instead of
	elem in the case where F(0) is non-zero.

2007-12-28  John W. Eaton  <jwe@octave.org>

	Merge changes from object branch:

	2007-12-12  John W. Eaton  <jwe@octave.org>

	* load-path.cc (load_path::dir_info::get_file_list,
	load_path::move_method_map, load_path::remove_method_map,
	load_path::do_find_fcn, load_path::do_find_private_fcn,
	load_path::do_find_method, load_path::do_find_file,